# oxidize

./: .gitignore  Cargo.toml  README.md
blockchain/: Cargo.toml
blockchain/src/: lib.rs
documentation/: desired-flow.md
src/: lib.rs  main.rs
src/blockchain/: Cargo.toml  address.rs  block.rs  blockchain.rs  blockchain_listener.rs  blockchain_node.rs  mod.rs  transaction_manager.rs  wallet.rs
src/blockchain/src/: blockchain.rs  lib.rs  wallet.rs
src/comms/: communication_messages.rs  mod.rs
src/config/: constants.rs  mod.rs
src/helpers/: helpers.rs  mod.rs
src/logger/: logger.rs  mod.rs
src/transaction/: mod.rs  transaction_manager.rs
src/utils/: hash_utils.rs  mod.rs  transaction_utils.rs
src/wallet/: account.rs  address.rs  crypto_wallet.rs  mod.rs  wallet.rs  wallet_client.rs  wallet_message.rs
src/websockets/: client.rs  mod.rs  server.rs  subscription_manager.rs  subscription_message.rs  subscription_topics.rs
