[package]
name = "oxidize"
version = "0.1.0"
edition = "2021"

[dependencies]
bump2version = "0.1.3"
chrono = "0.4.38"
thiserror = "2.0.3"
hdwallet = { version = "0.4.1" }
sha2 = "0.10.8"
bip39 = { version = "2.1.0", features = ["rand"] }
colored = "2.1.0"
tokio =  { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
futures-util = "0.3.31"
tokio-tungstenite = "0.24.0"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.93"
uuid = { version = "1.11.0", features = ["v4"] }
bincode = "2.0.1"
